fix: flickers between hovering two sections

--- a/src/pages/FormEditor/FormSandbox/FormStructure/FormFieldElement/style.module.css
+++ b/src/pages/FormEditor/FormSandbox/FormStructure/FormFieldElement/style.module.css
@@ -2,6 +2,11 @@
     display: flex;
 }
 
+.placeholderContainer {
+    opacity: 0.5;
+    filter: sepia(100%) brightness(90%) hue-rotate(170deg) saturate(500%);
+}
+
 .dragHandle {
     display: flex;
     flex-direction: column;
